deployments/k8s/springboot-app/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product
  name: product
  namespace: app
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: product
  type: ClusterIP
