deployments/k8s/springboot-app/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
spec:
  ingressClassName: nginx
  rules:
  - host: test.ingress-nginx.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: product
            port:
              number: 8000
